# gh-delta

./: Makefile  README.md  gh-delta.cabal  stack.yaml
app/: .#Main.hs  Main.hs
src/: Delta.mustache  Lib.hs
