name:                gh-delta
version:             0.1.0.0
synopsis:            Generate changelogs from Github
description:         Please see README.md
homepage:            https://github.com/githubuser/delta#readme
license:             BSD3
license-file:        LICENSE
author:              Philip Cunningham
maintainer:          hello@filib.io
copyright:           2016 Philip Cunningham
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 0.11
                     , file-embed
                     , github
                     , hastache
                     , syb
                     , text
                     , time
                     , vector
  ghc-options:         -Wall
  default-language:    Haskell2010

executable gh-delta
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , optparse-applicative
                     , gh-delta
                     , github
                     , text
  default-language:    Haskell2010

test-suite gh-delta-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gh-delta
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/filib/gh-delta
